3840.	[port]		Check for arc4random_addrandom() before using it;
			it's been removed from OpenBSD 5.5. [RT #35907]

3839.	[test]		Use only posix-compatible shell in system tests.
			[RT #35625]

3838.	[protocol]	EDNS EXPIRE as been assigned a code point of 9.

3837.	[security]	A NULL pointer is passed to query_prefetch resulting
			a REQUIRE assertion failure when a fetch is actually
			initiated.  [RT #35899]

3836.	[bug]		Address C++ keyword usage in header file.

3835.	[bug]		Geoip ACL elements didn't work correctly when
			referenced via named or nested ACLs. [RT #35879]

3834.	[bug]		The re-signing heaps were not being updated soon enough
			leading to multiple re-generations of the same RRSIG
			when a zone transfer was in progress. [RT #35273]

3833.	[bug]		Cross compiling was broken due to calling genrandom at
			build time. [RT #35869]

3832.	[func]		"named -L <filename>" causes named to send log
			messages to the specified file by default instead
			of to the system log. (Thanks to Tony Finch.)
			[RT #35845]

3831.	[cleanup]	Reduce logging noise when EDNS state changes occur.
			[RT #35843]

3830.	[func]		When query logging is enabled, log query errors at
			the same level ('info') as the queries themselves.
			[RT #35844]

3829.	[func]		"dig +ttlunits" causes dig to print TTL values
			with time-unit suffixes: w, d, h, m, s for
			weeks, days, hours, minutes, and seconds. (Thanks
			to Tony Finch.) [RT #35823]

3828.	[placeholder]

3827.	[func]		"dnssec-signzone -N date" updates serial number
			to the current date in YYYYMMDDNN format.
			[RT #35800]

3826.	[bug]		Corrected bad INSIST logic in isc_radix_remove().
			[RT #35870]

3825.	[bug]		Address sign extension bug in isc_regex_validate.
			[RT #35758]

3824.	[bug]		A collision between two flag values could cause
			problems with cache cleaning when SIT was enabled.
			[RT #35858]

3823.	[func]		Log the rpz cname target when rewriting. [RT #35667]
