@@ -1,3 +1,6 @@
+3841.	[cleanup]	Refactor zone.c:add_opt to use dns_message_buildopt.
+			[RT #35924]
+
 3840.	[port]		Check for arc4random_addrandom() before using it;
 			it's been removed from OpenBSD 5.5. [RT #35907]
 
